contig-derive/tests/ui/enum_not_allowed.stderr
error: #[contig] supports only structs
 --> tests/ui/enum_not_allowed.rs:4:1
  |
4 | enum NotAllowed {
  | ^^^^
