contig-derive/tests/ui/enum_not_allowed.rs
use contig_derive::contig;

#[contig(scalar = f64)]
enum NotAllowed {
    A,
    B,
}

fn main() {}
